tests/NormalTests/paczka1/small_fuzzy/54066708.err
Error in line 2: 7xB3X5kaMWB A57 48,4
Error in line 14: bpvUJMWdH3x S34p 14,3
